--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 {#{% extends "bootstrap/base.html" %}#}
 {% import "bootstrap/wtf.html" as wtf %}
 
-<body id="hero_image">
+<body id={{ body_id }}>
 {#<nav class="navbar navbar-expand bg-primary navbar-dark">#}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
