--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -10,7 +10,7 @@
 
 {% if results|length %}
 {# Variable is not empty #}
-<table class="table table-light recipes_table">
+<table class="table recipes_table">
     <thead class="thead-dark">
     <tr>
         <th scope="col">Recipe name</th>
