--- a/app/templates/main/view_recipe.html
+++ b/app/templates/main/view_recipe.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %}{{ recipe.recipe_name }}{% endblock %}
 {% block content %}
+
+<img src="../static/img/recipe_images/{{ recipe.photo | default('0.jpg') }}" alt={{ recipe.recipe_name }} height="300" />
+
 <h1>{{ recipe.recipe_name }}</h1>
 <table class="table">
     <thead class="thead-dark">
