--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h3>Meal planning made easy - test heroku deploy SHOULD SHOW</h3>
+    <h3>Meal planning made easy</h3>
     <form class="form-inline ml-auto simple_search" action="search" method="post">
         <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
                name="search_term">
